- fixed navbar do not fit

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -373,7 +373,7 @@ img.lazy {
     max-width: 85%;
   }
   .nav-brand h1{
-    font-size: 22px;
+    font-size: 18px;
   }
   #copy-btn{
     width: 30%;
